# car-cost-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data.dvc  model.dvc  pyproject.toml
.dvc/: config
db/: docker-compose.yml
infra/: README.md  athena.tf  build.sh  cloud-init.yaml  cloudwatch.tf  destroy.sh  glue.tf  hetzner.tf  iam.tf  lambda.tf  main.tf  s3.tf  terraform.tfstate.dvc  vars.tf
infra/lambda/: dedup.py  etl.py  processing.py
mlflow/: .env.example  docker-compose.yml  mlflow.dockerfile  start.sh  stop.sh
notebooks/: exponential.ipynb  nn.ipynb
scripts/: start-db.sh  start-mlflow.sh  start-venv.sh  stop-db.sh  stop-mlflow.sh
src/: Dockerfile  dev-requirements.txt  requirements.txt  setup.py
src/citroen/: README.md  data.sql  pull.py
src/citroen/models/: __init__.py  exponential.py
src/citroen/training/: train  train.py
src/data/: data.sql  pull.py
src/models/: __init__.py
src/models/exponential/: base.py  preprocessing.py  train.py
src/models/exponential/api/: api.py
src/models/exponential/api/templates/: index.html
src/utils/: decorators.py  read.py  split.py
terraform/: README.md  main.tf
terraform/lambda/: etl.py
terraform/s3/: main.tf
tests/models/exponential/: test_exponential.py
