[tool.poetry]
name = "src"
version = "0.0.1"
description = "Fuel consumption prediction"
authors = ["Daniel Diego Horcajuelo <dadiego91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
awswrangler = "^3.1.1"
mlflow = "^2.4.0"
scikeras = {extras = ["tensorflow"], version = "^0.10.0"}
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
tensorflow = "^2.12.0"
psycopg2 = "^2.9.6"
hyperopt = "^0.2.7"
flask = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
freezegun = "*"
black = {extras = ["jupyter"], version = "*"}
pre-commit = "*"
ipykernel = "*"
mypy = "*"

[tool.poetry.scripts]
pull = "src.data.pull:main"
train = "src.models.exponential.train:main"
api = "src.models.exponential.api.api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
